# typecho-algolia

./: .env.example  .gitignore  Cargo.toml
src/: algolia.rs  lib.rs  typecho.rs
src/algolia/: client.rs  schema.rs
src/orama/: webhook.rs
src/typecho/: model.rs  query.rs  schema.rs
