[package]
name = "typecho-algolia"
version = "0.1.0"
edition = "2021"
default-run = "sync"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql", "macros"] }
tokio = { version = "1.38.0", features = ["full"] }

[lib]
name = "ta"
path = "src/lib.rs"

[[bin]]
name = "sync"
path = "bin/sync.rs"
